all updated files with Oraz Documentation
Oraz documentation.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	
         <div data-role="content" id="h">
           <p></p>
-	  <h1>Search for Pictures Taken by Cameras and Phones.</h1>
+	  <h1>Search for Pictures Taken by a Camera or a Phone.</h1>
           <input type="search" name="search" id="pictureInput" value="" class="but" placeholder="Search by Brand, Models or Phones..."/>
           
 	  <p></p>
@@ -141,11 +141,19 @@
         </div>
         
         <div data-role="content">
-	  <p><b>Oraz</b> - An application created by the worlds best programmers Orazio Lentini and Krunal Intwala.</p>
-	  <p>If you are in dire need to buy the best camera use ORAZ!</p>
-	  <p>This application allows users to view images taken by cameras or phones. This assists users when they are purchasing a camera or phone. Using flickr services to retrieve brands, models and images.</p>
-	  <p>It uses jQuery Mobile, JavaScript, Backbone js, CSS, flickr API, and HTML5.</p>
-	  <br><hr>
+
+
+
+	   <p><b>Oraz</b> - A mobile web application created by the worlds best programmers Orazio Lentini and Krunal Intwala.</p>
+	    <p>
+	    • Goal of Oraz is to assists users to purchase a camera or phone that takes great pictures.<br><br>
+	    • This application allows users to view and compare images taken by cameras or phones.<br><br>
+	    • Features include adding to favorites, deleting favorites, deleting all favorites, as well as controlling how many camera models and images are diplayed.<br><br>
+	    • Additional feature is searching for any type of images by clicking Camera. i.g kites -> click Brand
+	    </p>
+	  
+	  <p><b>Oraz</b> - uses HTML5, jQuery Mobile, JavaScript with Backbone.js, CSS, flickr API, and phonegap.<br> </p>
+	  <hr>
           <p><b>Created By Orazio Lentini and Krunal Intwala.</b></p>
 	  <p><a href="https://github.com/OrazioLentini/ORAZ">View on Github</a></p>
 	  
