--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 	  <p><label for="brands">Number of Brands to display</label></p>
 	  <p><input name="brands" id="brands" data-highlight="true" min="0" max="100" value="10" type="range"></p>
 	  <p><label for="pictures">Number of Pictures to display</label></p>
-	  <p><input name="pictures" id="pictures" data-highlight="true" min="0" max="100" value="20" type="range"></p>
+	  <p><input name="pictures" id="pictures" data-highlight="true" min="0" max="100" value="10" type="range"></p>
 	</form>
 	
 	<h1><a href="#" input type="button" data-inline = "true" onclick="applySettings()">Apply</a></h1>
@@ -145,13 +145,13 @@
 
 
 	   <p><b>Oraz</b> - A mobile web application created by the worlds best programmers Orazio Lentini and Krunal Intwala.</p>
-	    <p>
-	    • Goal of Oraz is to assists users to purchase a camera or phone that takes great pictures.<br><br>
-	    • This application allows users to view and compare images taken by cameras or phones.<br><br>
-	    • Features include adding to favorites, deleting favorites, deleting all favorites, as well as controlling how many camera models and images are diplayed.<br><br>
-	    • Additional feature is searching for any type of images by clicking Camera. i.g kites -> click Brand
-	    </p>
+	    
+	    <li><p>This application allows users to view and compare images taken by cameras or phones.</p></li>
+	    <li><p>Goal of Oraz is to assists users to purchase a camera or a phone that takes great pictures.</p></li>	    
+	    <li><p>Hidden feature is searching for any type of images by clicking Camera. i.g kites -> click Camera.</p></li>
+	    <li><p>Features include adding to favorites, deleting favorites, deleting all favorites, as well as controlling how many camera models and images are diplayed.</p></li>
 	  
+	    
 	  <p><b>Oraz</b> - uses HTML5, jQuery Mobile, JavaScript with Backbone.js, CSS, flickr API, and phonegap.<br> </p>
 	  <hr>
           <p><b>Created By Orazio Lentini and Krunal Intwala.</b></p>
