Fixed some issues with Error message
Info page change and error.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html class="ui-mobile-rendering">
     <head>
-    <title>ORAZ - Helping With Finding A Camera</title>
+    <title>Oraz </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/jquery.mobile-1.0.1.min.css"/>
@@ -35,7 +35,7 @@
 	    <a href="#results" input type="button"  data-inline = "true"  value="Search Pictures" onclick="getPictures()">Camera</a>
 	  </div>
 	   
-    	  <p>Created By Orazio Lentini and Krunal Intwala</p>
+    	  <p><b>Created By Orazio Lentini and Krunal Intwala</b></p>
 	  <p>Powered by flickr</p> 
 	</div>
 
@@ -214,7 +214,7 @@
         <div data-role="footer" data-position="fixed" data-theme="d" class="ui-grid-solo">
 	    <div data-role="navbar">
 		<ul>
-		  <li><a onclick="removeFavs()" id="star" data-role="button" data-icon="custom">Unfav</a></li>
+		  <li><a href="#favs" onclick="removeFavs()" id="star" data-role="button" data-icon="custom">Unfavorite</a></li>
                 </ul>
 	    </div><!--Navbar-->
 	</div><!--Footer-->
